--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,7 +1,5 @@
 FROM node:16.13.0-alpine3.14
 
-RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
-
 WORKDIR /home/node/api
 
 COPY ./package*.json .
@@ -10,9 +8,7 @@ RUN apk update && apk add python3 make g++
 
 RUN yarn
 
-USER node
-
-COPY --chown=node:node . .
+COPY . .
 
 ENV NODE_ENV development
 
