--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "6.0.4",
     "@react-navigation/native": "6.0.2",
     "@react-navigation/stack": "6.0.7",
+    "@react-spring/native": "9.4.3",
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "42.0.3",
