--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "compress.js": "1.2.2",
     "craco-alias": "3.0.1",
     "formik": "2.2.9",
+    "framer-motion": "6.2.6",
     "katex": "0.15.2",
     "prop-types": "15.8.1",
     "react": "17.0.2",
@@ -25,6 +26,9 @@
     "styled-components": "5.3.3",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@5.3.0"
   },
   "scripts": {
     "start": "craco start",
