--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,11 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "nodemon src/server",
+    "dev": "nodemon src/server",
     "start:prod": "sucrase-node src/server.js",
+    "prod": "sucrase-node src/server.js",
     "dev:debug": "nodemon --inspect src/server",
+    "debug": "nodemon --inspect src/server",
     "test": "jest",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
