--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "react-devtool": "react-devtools"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
@@ -62,6 +63,7 @@
     "eslint-plugin-react": "7.26.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.4.1",
+    "react-devtools": "4.24.1",
     "react-native-svg-transformer": "0.14.3"
   },
   "private": true
