--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "apexcharts": "3.35.0",
     "axios": "0.25.0",
     "compress.js": "1.2.2",
     "craco-alias": "3.0.1",
@@ -19,6 +20,7 @@
     "katex": "0.15.2",
     "prop-types": "15.8.1",
     "react": "17.0.2",
+    "react-apexcharts": "1.4.0",
     "react-dom": "17.0.2",
     "react-dropzone": "11.5.1",
     "react-router-dom": "6.2.1",
@@ -55,15 +57,16 @@
     ]
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-airbnb": "19.0.4",
+    "@babel/eslint-parser": "7.16.5",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1"
   }
 }
