--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,16 +1,41 @@
 FROM node:16.13.0-alpine3.14 as builder
+
 RUN mkdir -p /home/node/react_prod/node_modules && chown -R node:node /home/node/react_prod
 
 WORKDIR /home/node/react_prod
+
 ENV PATH /home/node/react_prod/node_modules/.bin:$PATH
+
 COPY ./package*.json ./
+
 RUN yarn install --production=true
+
 USER node
+
 COPY --chown=node:node . .
 
 ENV NODE_ENV production
+
 ARG API_URL
+
 ENV REACT_APP_BASE_URL $API_URL
+
 ENV GENERATE_SOURCEMAP false
 
 RUN yarn build
+
+# # stage 2
+FROM  nginx:latest
+COPY --from=builder /home/node/react_prod/build /usr/share/nginx/html
+
+# Copy custom configuration file from the current directory
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+
+COPY nginx/apiquiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/apiquiz.dacom.cm.utfpr.edu.br
+COPY nginx/quiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/quiz.dacom.cm.utfpr.edu.br
+
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
