--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -25,17 +25,17 @@ ENV GENERATE_SOURCEMAP false
 RUN yarn build
 
 # # stage 2
-FROM  nginx:latest
-COPY --from=builder /home/node/react_prod/build /usr/share/nginx/html
+# FROM  nginx:latest
+# COPY --from=builder /home/node/react_prod/build /usr/share/nginx/html
 
-# Copy custom configuration file from the current directory
-RUN rm /etc/nginx/conf.d/default.conf
+# # Copy custom configuration file from the current directory
+# RUN rm /etc/nginx/conf.d/default.conf
 
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
+# COPY nginx/nginx.conf /etc/nginx/nginx.conf
 
-COPY nginx/apiquiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/apiquiz.dacom.cm.utfpr.edu.br
-COPY nginx/quiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/quiz.dacom.cm.utfpr.edu.br
+# COPY nginx/apiquiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/apiquiz.dacom.cm.utfpr.edu.br
+# COPY nginx/quiz.dacom.cm.utfpr.edu.br /etc/nginx/sites-enabled/quiz.dacom.cm.utfpr.edu.br
 
 
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
