--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,18 +1,18 @@
 FROM node:16.13.0-alpine3.14
 
-RUN mkdir -p /home/node/api_prod/node_modules && chown -R node:node /home/node/api_prod
+RUN apk update && apk add python3 make g++
+
+USER root
+
+RUN mkdir -p /home/node/api_prod/node_modules && chown -R root:root /home/node/api_prod
 
 WORKDIR /home/node/api_prod
 
-COPY ./package*.json .
-
-RUN apk update && apk add python3 make g++
+COPY --chown=root:root ./package*.json .
 
 RUN yarn install --production=true
 
-USER node
-
-COPY --chown=node:node . .
+COPY --chown=root:root . .
 
 ENV NODE_ENV production
 
