--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "react-devtool": "react-devtools"
   },
   "dependencies": {
+    "@expo/metro-config": "0.3.16",
     "@expo/vector-icons": "12.0.5",
     "@react-native-async-storage/async-storage": "1.15.0",
     "@react-native-community/masked-view": "0.1.11",
@@ -41,13 +42,13 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "0.14.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.5",
     "styled-theming": "2.2.0",
-    "yup": "^0.32.11",
-    "react-native-svg-transformer": "0.14.3"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
