--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "react-apexcharts": "1.4.0",
     "react-dom": "17.0.2",
     "react-dropzone": "11.5.1",
+    "react-google-login": "^5.2.2",
+    "react-imask": "^6.4.3",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.1",
     "styled-components": "5.3.6",
