--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.5",
     "@mui/styled-engine-sc": "^5.10.3",
     "@mui/system": "^5.10.5",
+    "@react-oauth/google": "0.4.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -18,7 +19,9 @@
     "craco-alias": "3.0.1",
     "formik": "2.2.9",
     "framer-motion": "6.2.6",
+    "gapi-script": "1.2.0",
     "katex": "0.15.2",
+    "notistack": "2.0.8",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
