--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,30 +22,30 @@
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
     "eslint-plugin-react-perf": "3.3.1",
-    "expo": "^47.0.0",
-    "expo-auth-session": "~3.7.2",
-    "expo-blur": "~12.0.1",
-    "expo-clipboard": "~4.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-random": "~13.0.0",
-    "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "~12.0.0",
+    "expo": "^46.0.0",
+    "expo-auth-session": "3.7.1",
+    "expo-blur": "~11.2.0",
+    "expo-clipboard": "~3.1.0",
+    "expo-constants": "~13.2.4",
+    "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-random": "~12.3.0",
+    "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
     "formik": "2.2.9",
     "global": "^4.4.0",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "5.1.3",
     "prop-types": "^15.8.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-mathjax-html-to-svg": "1.0.6",
-    "react-native-pager-view": "6.0.1",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-pager-view": "5.4.24",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "0.14.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "8.1.0",
