--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,7 +23,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "eslint-plugin-react-perf": "3.3.1",
     "expo": "^46.0.0",
-    "expo-auth-session": "3.7.1",
+    "expo-auth-session": "~3.7.3",
     "expo-blur": "~11.2.0",
     "expo-clipboard": "~3.1.0",
     "expo-constants": "~13.2.4",
