--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "start": "craco start",
     "build": "DISABLE_ESLINT_PLUGIN='true' craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js"
   },
   "eslintConfig": {
     "extends": [
